# blackroad-agents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLANNING.md  README.md  clerk-config.json  docker-compose.yml  index.html  pyproject.toml  railway.toml  requirements.txt  service-mesh.json  stripe-config.json  wrangler.toml
.github/workflows/: agent-jobs-orchestrator.yml  deploy-multi-cloud.yml  self-healing.yml
agent/: __init__.py  api.py  config.py  daemon.py  dashboard.py  flash.py  jobs.py  models.py  store.py  telemetry.py  transcribe.py
agent/integrations/: __init__.py  ai_ml.py  auth_payments.py  developer_tools.py  platforms.py  productivity.py  security.py  tunnels.py
coordination/: skill-matcher.sh
db/: schema.sql
src/: API.md  index.js
src/durable-objects/: index.js
src/jobs/: scheduler.js
src/self-healing/: healer.js
src/sync/: repo-sync.js
src/utils/: helpers.js
