[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackroad-agents"
version = "0.1.0"
description = "BlackRoad Agent API - telemetry, job scheduling, and CeCe dynamic planner"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BlackRoad OS", email = "hello@blackroad.io" }
]
keywords = [
    "ai",
    "agents",
    "telemetry",
    "scheduling",
    "orchestration",
    "dynamic-planning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "redis>=4.0.0",
    "psutil>=5.9.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.6",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
blackroad-agent = "agent.api:main"
cece = "cece.dynamic_planner:main"

[project.urls]
Homepage = "https://blackroad.io"
Documentation = "https://docs.blackroad.io/agents"
Repository = "https://github.com/BlackRoad-OS/blackroad-agents"
Issues = "https://github.com/BlackRoad-OS/blackroad-agents/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent", "cece"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
